syntax = "proto3";

package user;

import "google/api/annotations.proto";

option go_package = "user-service/proto";

service UserService {
    rpc Register(RegisterRequest) returns (AuthResponse) {
        option (google.api.http) = {
            post: "/v1/users/register"
            body: "*"
        };

    };
    rpc Login(LoginRequest) returns (AuthResponse) {
        option (google.api.http) = {
            post: "/v1/users/login"
            body: "*"
        };
    };
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
}
